plugins {
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

group = 'app.classeMorta'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.jsoup:jsoup:1.17.2'
    implementation "io.netty:netty-resolver-dns-native-macos:4.1.110.Final:osx-aarch_64"
    runtimeOnly 'com.mysql:mysql-connector-j'

    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
    testCompileOnly 'org.projectlombok:lombok:1.18.32'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'

    testImplementation 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    //per grafici
    implementation 'org.jfree:jfreechart:1.5.4'
}

tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
}

// === Sezione fondamentale per JAR eseguibile ===

springBoot {
    mainClass = "app.classeMorta.ClasseMorta.GUI.UIApplication"
}

bootJar {
    archiveFileName = 'ClasseMorta.jar'
    launchScript()  // Utile su Unix/Mac per doppio click, crea script di avvio
}

// NON servono manifest custom o archiveBaseName: il task bootJar fa tutto

// Se vuoi lanciare localmente con run:
bootRun {
    mainClass.set('app.classeMorta.ClasseMorta.GUI.UIApplication')
}